--- a/app/globals.css
+++ b/app/globals.css
@@ -37,3 +37,7 @@ body {
     font-family: var(--font-orbitron);
   }
 }
+
+.team-member-card:hover .team-member-bg {
+  background-position: var(--bg-pos-hover) !important;
+}
