--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,31 @@
   --font-orbitron: var(--font-orbitron), "Orbitron", sans-serif;
 }
 
+@source inline("text-1");
+@source inline("text-2");
+@source inline("text-3");
+@source inline("text-4");
+@source inline("hover:bg-1/15");
+@source inline("hover:bg-2/15");
+@source inline("hover:bg-3/15");
+@source inline("hover:bg-4/15");
+@source inline("hover:bg-1/10");
+@source inline("hover:bg-2/10");
+@source inline("hover:bg-3/10");
+@source inline("hover:bg-4/10");
+@source inline("hover:border-1");
+@source inline("hover:border-2");
+@source inline("hover:border-3");
+@source inline("hover:border-4");
+@source inline("group-hover:via-1");
+@source inline("group-hover:via-2");
+@source inline("group-hover:via-3");
+@source inline("group-hover:via-4");
+@source inline("group-hover:to-1-dark");
+@source inline("group-hover:to-2-dark");
+@source inline("group-hover:to-3-dark");
+@source inline("group-hover:to-4-dark");
+
 body {
   background: var(--color-grey-darkest);
   color: var(--color-grey-lightest);
