--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
   --color-grey-darkest: #000000;
   --color-grey-darker: #252525;
   --color-grey-dark: #3a3a3a;
+  --color-grey-medium: #7b7b7b;
   --color-grey-light: #a3a3a3;
   --color-grey-lighter: #e0e0e0;
   --color-grey-lightest: #ffffff;
@@ -61,6 +62,7 @@ body {
   background: var(--color-grey-darkest);
   color: var(--color-grey-lightest);
   font-family: var(--font-outfit);
+  scrollbar-gutter: stable;
 
   h1,
   h2,
